# mycloud

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml
docs/: deploy-backend.md  deploy-frontend.md  deploy-pages.md
frontend/: .env.production  package-lock.json  package.json  wrangler.toml
frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: InstanceActions.tsx
frontend/src/views/: Activity.tsx  Instances.tsx  Overview.tsx
infra/caddy/: Caddyfile
infra/coredns/: Corefile
plan/: 00-architecture.md  01-rename-to-control-plane.md  02-instance-sizes-and-api.md  03-public-dns-cloudflare.md  04-reverse-proxy-and-tunnel.md  05-port-discovery-and-service-routing.md  06-private-split-dns.md  07-ssh-key-base-image.md  08-web-ui.md  EXECUTION.md  README.md
scripts/: README.md  bootstrap-control-node.sh  control-node-deploy.sh  deploy-frontend.sh  deploy-remote.sh  deploy-stack.sh
src/homecloud/: __init__.py  access.py  auth.py  config.py  jobs.py  main.py  publish.py  state.py
src/homecloud/api/: routes.py  schemas.py
src/homecloud/cloudflare/: __init__.py  dns.py
src/homecloud/dns/: names.py  (+2 more)
ssh/: config
tests/: test_auth.py  test_cloudflare_dns.py  test_config.py  test_dns_zone.py  test_hostnames.py  test_lifecycle.py  test_proxmox_integration.py
web/: .env.example  .env.production  index.html  package.json  vite.config.ts
web/src/: App.tsx  main.tsx  vite-env.d.ts
(+17 files in other folders)
